--- a/src/Osmo/appsettings.json
+++ b/src/Osmo/appsettings.json
@@ -8,9 +8,17 @@
         "Microsoft.EntityFrameworkCore.Database.Command": "Fatal",
         "System.Net.Http.HttpClient": "Warning"
       }
-    }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "%PROGRAMDATA%/Osmo/logs/log-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
   },
-
   "AllowedHosts": "*",
   "Kestrel": {
     "Endpoints": {
