--- a/src/Osmo/Osmo.csproj
+++ b/src/Osmo/Osmo.csproj
@@ -17,6 +17,7 @@
       <PackageReference Include="Serilog.Extensions.Hosting" />
       <PackageReference Include="Serilog.Settings.Configuration" />
       <PackageReference Include="Serilog.Sinks.Console" />
+      <PackageReference Include="Serilog.Sinks.File" />
     </ItemGroup>
 
     <ItemGroup>
