Add a tests project and test containers

--- a/src/Osmo/Osmo.csproj
+++ b/src/Osmo/Osmo.csproj
@@ -3,7 +3,12 @@
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
+        <HotReloadEnabled>true</HotReloadEnabled>
     </PropertyGroup>
+
+    <ItemGroup>
+        <InternalsVisibleTo Include="Osmo.Test" />
+    </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="CodeBeam.MudBlazor.Extensions" />
