--- a/src/Osmo/appsettings.json
+++ b/src/Osmo/appsettings.json
@@ -31,5 +31,11 @@
     "ConneXHost": {
       "HostName": "connexion.dataio.internal"
     }
+  },
+  "PostgresOptions": {
+    "Host": "localhost",
+    "Username": "dataio",
+    "Password": "dataio",
+    "Port": 5432
   }
 }
