--- a/src/Osmo/appsettings.Development.json
+++ b/src/Osmo/appsettings.Development.json
@@ -5,5 +5,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "PostgresOptions": {
+    "Host": "localhost",
+    "Username": "admin",
+    "Password": "admin",
+    "Port": 6432
   }
 }
