--- a/src/Osmo/Osmo.csproj
+++ b/src/Osmo/Osmo.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
       <PackageReference Include="CodeBeam.MudBlazor.Extensions" />
       <PackageReference Include="MassTransit" />
+      <PackageReference Include="MassTransit.RabbitMQ" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
