--- a/src/Osmo/appsettings.json
+++ b/src/Osmo/appsettings.json
@@ -23,7 +23,7 @@
   "Kestrel": {
     "Endpoints": {
       "Https": {
-        "Url": "http://*:5005"
+        "Url": "http://0.0.0.0:5005"
       }
     }
   },
